# Eternity

./: .gitmodules  Assert.hpp  CMakeLists.txt  Makefile  main.cpp
Engine/: Assert.hpp  Base.hpp  CMakeLists.txt  Camera.hpp  Eternity.hpp  Makefile  Mesh.cpp  Mesh.hpp  PlatformDetection.hpp  Renderable.hpp  Vertex.hpp  VulkanApp.cpp  VulkanApp.hpp  VulkanBuildDevice.cpp  VulkanBuildInstance.cpp  VulkanBuildPipeline.cpp  VulkanBuildSwapchain.cpp  VulkanHelper.hpp  VulkanImage.cpp  VulkanShader.cpp  VulkanUtils.cpp  VulkanVertexBuffer.cpp  Window.cpp  Window.hpp  main.cpp
Engine/API/Vulkan/: Buffer.hpp  CommandPool.cpp  CommandPool.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorSets.cpp  DescriptorSets.hpp  Descriptors.cpp  Descriptors.hpp  Device.cpp  Device.hpp  Framebuffers.cpp  Framebuffers.hpp  GraphicsPipeline.cpp  GraphicsPipeline.hpp  GraphicsPipelineLayout.cpp  GraphicsPipelineLayout.hpp  Image.cpp  Image.hpp  Instance.cpp  Instance.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  RenderPass.cpp  RenderPass.hpp  Shader.cpp  Shader.hpp  Surface.cpp  Surface.hpp  Swapchain.cpp  Swapchain.hpp  Utils.cpp  Utils.hpp  VkCheck.hpp
Engine/API/Vulkan/Buffer/: Buffer.cpp  Buffer.hpp  CommandBuffer.cpp  CommandBuffer.hpp  UniformBuffer.cpp  UniformBuffer.hpp
Engine/API/Vulkan/Image/: DepthImage.cpp  DepthImage.hpp  Image.cpp  Image.hpp  Image2D.cpp  Image2D.hpp
Engine/Core/: Assert.hpp  Base.hpp  DeletionQueue.hpp  KeyCodes.hpp  Log.hpp  MouseCodes.hpp  Window.cpp  Window.hpp
Engine/Events/: Event.hpp  EventSystem.cpp  EventSystem.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
Engine/Graphics/: Camera.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  RendererCommand.cpp  RendererCommand.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
Engine/Input/: Input.cpp  Input.hpp  KeyCodes.hpp  MouseCodes.hpp
Engine/Platform/Linux/: LinuxWindow.cpp  LinuxWindow.hpp
Engine/Platform/Vulkan/: DeviceBuilder.cpp  DeviceBuilder.hpp  InstanceBuilder.cpp  InstanceBuilder.hpp  PhysicalDeviceSelector.cpp  PhysicalDeviceSelector.hpp  VkDebugHelper.cpp  VkDebugHelper.hpp  VkGraphicContext.cpp  VkGraphicContext.hpp  VkRendererAPI.cpp  VkRendererAPI.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanWrapper.hpp
Engine/Sandbox/: Block.hpp  Chunk.cpp  Chunk.hpp
Engine/Utils/: Logger.hpp  VulkanDebugCallback.hpp
Engine/shaders/: mesh.vert  meshFrag.spv  tri_mesh.spv  tri_mesh.vert  triangle.frag  triangle.vert  triangleVert.spv
Sandbox/: InstanceBuilder.cpp  InstanceBuilder.hpp  VkRenderer.cpp  VkRenderer.hpp  VulkanCheck.cpp  VulkanCheck.hpp  VulkanHelper.cpp  VulkanHelper.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  main.cpp
Sandbox/shaders/: shader.vert  vert.spv
shaders/: shader.vert  vert.spv
